--- a/functions/package.json
+++ b/functions/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "sojobless-functions",
+  "name": "functions",
   "type": "module",
+  "engines": {
+    "node": "20"
+  },
   "main": "index.js",
+  "private": true,
+  "scripts": {
+    "build": "echo \"No build step\"",
+    "deploy": "firebase deploy --only functions",
+    "serve": "firebase emulators:start --only functions"
+  },
   "dependencies": {
-    "firebase-admin": "^12.5.0",
-    "firebase-functions": "^5.1.1",
-    "node-fetch": "^3.3.2",
-    "resend": "^3.2.0"
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.4.0"
   }
 }
